--- a/jenkinsfile
+++ b/jenkinsfile
@@ -9,16 +9,69 @@ pipeline {
             }
         }
 
+        stage('Install Apache') {
+            steps {
+                script {
+                    // Update and install Apache
+                    sh 'sudo apt-get update'
+                    sh 'sudo apt-get install -y apache2'
+                    
+                    // Start Apache service and enable it to start on boot
+                    sh 'sudo systemctl start apache2'
+                    sh 'sudo systemctl enable apache2'
+                }
+            }
+        }
+
         stage('Deploy Static HTML') {
             steps {
-                // Buat direktori tujuan (kalau belum ada)
+                // Buat direktori tujuan untuk menempatkan file HTML
                 sh 'mkdir -p /tmp/html-deploy'
 
-                // Salin semua file HTML ke direktori tersebut
+                // Salin semua file HTML ke direktori tujuan
                 sh 'cp -r * /tmp/html-deploy/'
 
                 echo 'Static HTML berhasil disalin ke /tmp/html-deploy'
             }
+        }
+
+        stage('Move HTML to Apache Directory') {
+            steps {
+                // Salin HTML ke direktori Apache (/var/www/html)
+                sh 'sudo cp -r /tmp/html-deploy/* /var/www/html/'
+
+                echo 'HTML berhasil dipindahkan ke direktori Apache /var/www/html'
+            }
+        }
+
+        stage('Restart Apache') {
+            steps {
+                // Restart Apache untuk memastikan perubahan diterapkan
+                sh 'sudo systemctl restart apache2'
+            }
+        }
+
+        stage('Verify Apache Installation') {
+            steps {
+                script {
+                    // Verifikasi bahwa Apache berjalan
+                    sh 'sudo systemctl status apache2'
+                }
+            }
+        }
+    }
+
+    post {
+        always {
+            echo 'Pipeline execution finished'
+        }
+
+        success {
+            echo 'Apache installed, and static HTML deployed successfully'
+        }
+
+        failure {
+            echo 'Pipeline failed during installation or deployment'
         }
     }
 }
